--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "bot.js",
   "devDependencies": {},
   "scripts": {
-    "start": "npm bot.js"
+    "start": "npm bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wolf",
